added link to git and netlify

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">Derricka Allen</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/codetaru" target="_blank"> on GitHub</a> and
+          <a href="https://app.netlify.com/teams/codetaru/overview" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
